make a response resume

--- a/gitweb/vilianresume.html
+++ b/gitweb/vilianresume.html
@@ -4,19 +4,97 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>李琦琰的简历</title>
-    <link href="css/resume/vilianresume.css" rel="stylesheet" />
     <link href="lib/fullpages/jquery.fullPage.css" rel="stylesheet" />
+    <link href="lib/particles/css/style.css" rel="stylesheet" />
+    <link href="css/resume/vilianresume.css" rel="stylesheet" />
 </head>
 <body>
 
     <div id="fullpage">
         <section class="section" id="section0">
-            <div class="intro">
-
+            <div id="particles-js">
+                <div class="intro">
+                    <div class="section0-box">
+                        <div class="myphoto"></div>
+                        <h2 class="title">李琦琰</h2>
+                        <p class="position">前端工程师</p>
+                        <p class="personnal-des">曾经做过UI设计的前端工程师，对完美还原设计稿有着近乎执着的追求</p>
+                        <p class="gratuetion">2013年毕业于长春光华学院电气工程及其自动化专业（本科）</p>
+                        <p class="job">
+                            毕业后进入LED行业担任电源工程师<br><br>
+                            一年后进入互联网行业，利用自身的绘画能力以及对互联网产品的了解，成为一名UI设计师<br><br>
+                            由于公司需求，开始学习前端知识，自己根据设计稿制作网页<br><br>
+                            随后开始学习响应式网站制作、JQuery插件的使用、Angularjs以及开始涉及JavaScript<br><br>
+                            目前是一名专职Web前端工程师
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="section" id="section1">
-
+            <div class="intro">
+                <div class="skill-title">
+                    <h2><strong>专业技能</strong></h2>
+                </div>
+                <div class="skills">
+                    <div class="">
+                        <div class="skills-list">
+                            <div class="skills-ico">
+                                <img src="images/skill_ico/html.png" alt="html">
+                            </div>
+                            <div class="skills-des">
+                                <h3>HTML5+CSS3</h3>
+                                <p>超文本标记语言，前端工程师的基础<br /><strong>掌握程度：精通</strong></p>
+                            </div>
+                        </div>
+                        <div class="list">
+                            <div class="skills-ico">
+                                <img src="images/skill_ico/boot.png" alt="boot">
+                            </div>
+                            <div class="skills-des">
+                                <h3>bootstrap</h3>
+                                <p>国内外最流行的响应式网站框架<br /><strong>掌握程度：精通</strong></p>
+                            </div>
+                        </div>
+                        <!--<div class="list">
+                            <div class="skills-ico">
+                                <img src="images/skill_ico/JQuery.png" alt="jq">
+                            </div>
+                            <div class="skills-des">
+                                <h3>JQuery</h3>
+                                <p>一款轻量级的JS框架，目前应用最广泛的JavaScript框架，极大的简化了JavaScript编程<br /><strong>掌握程度：精通</strong></p>
+                            </div>
+                        </div>
+                        <div class="list">
+                            <div class="col-xs-4 skills-ico">
+                                <img src="images/skill_ico/nodejs-512.png" alt="js">
+                            </div>
+                            <div class="skills-des">
+                                <h3>JavaScript</h3>
+                                <p>直译式脚本语言，用于网页开发中为网页添加动态交互功能、数据的读取和检测、控制cookies等<br /><strong>掌握程度：熟练</strong></p>
+                            </div>
+                        </div>
+                        <div class="list">
+                            <div class="skills-ico">
+                                <img src="images/skill_ico/AngularJS-Shield-large.png" alt="aj">
+                            </div>
+                            <div class="skills-des">
+                                <h3>AngularJS</h3>
+                                <p>AngularJS是为了克服HTML在构建应用上的不足而设计的,它尝试去补足HTML本身在构建应用方面的缺陷<br /><strong>掌握程度：熟练</strong></p>
+                            </div>
+                        </div>
+                        <div class="list">
+                            <div class="skills-ico">
+                                <img src="images/skill_ico/App-Adobe-Photoshop-icon.png" alt="ps">
+                            </div>
+                            <div class="skills-des">
+                                <h3>Photoshop</h3>
+                                <p>强大的位图处理软件，在前端开发中主要用于切图、制作图片包等工作<br /><strong>掌握程度：精通</strong></p>
+                            </div>
+                        </div>-->
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="section" id="section2">
 
@@ -43,6 +121,8 @@
     <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
     <script src="lib/fullpages/jquery.fullPage.min.js" type="text/javascript"></script>
     <script src="lib/fullpages/vendors/scrolloverflow.min.js" type="text/javascript"></script>
+    <script src="lib/particles/particles.min.js"></script>
+    <script src="lib/particles/js/app.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('#fullpage').fullpage({
